Fixed textwrap on mainscreen
I broke it when i did the loop so i fixed it again

--- a/IntegratedProject1/src/MainScreen/listview.css
+++ b/IntegratedProject1/src/MainScreen/listview.css
@@ -5,3 +5,10 @@
 .list-view .list-cell:even {
     -fx-background-color: white;
 }
+
+.list-view .scroll-bar:horizontal .increment-arrow,
+.list-view .scroll-bar:horizontal .decrement-arrow,
+.list-view .scroll-bar:horizontal .increment-button,
+.list-view .scroll-bar:horizontal .decrement-button {
+    -fx-padding:0;
+}
